--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Cpp-Exercises-Level-2-Course-5-"]
 	path = Cpp-Exercises-Level-2-Course-5-
 	url = https://github.com/MohamedRaghebOmer/Cpp-Exercises-Level-2-Course-5-.git
+[submodule "Improve-my-Cpp-knowledge-Course-6-"]
+	path = Improve-my-Cpp-knowledge-Course-6-
+	url = https://github.com/MohamedRaghebOmer/Improve-my-Cpp-knowledge-Course-6-.git
