Add (Cpp-Exercises-Course-7-) as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Improve-my-Cpp-knowledge-Course-6-"]
 	path = Improve-my-Cpp-knowledge-Course-6-
 	url = https://github.com/MohamedRaghebOmer/Improve-my-Cpp-knowledge-Course-6-.git
+[submodule "Cpp-Exercises-Course-7-"]
+	path = Cpp-Exercises-Course-7-
+	url = https://github.com/MohamedRaghebOmer/Cpp-Exercises-Course-7-.git
